--- a/FinalProject/jokedisplay/src/main/AndroidManifest.xml
+++ b/FinalProject/jokedisplay/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.udacity.gradle.builditbigger.jokedisplay" />
+    package="com.udacity.gradle.builditbigger.jokedisplay">
+
+    <application>
+        <activity android:name=".DisplayActivity"></activity>
+    </application>
+
+</manifest>
