Added unit tests and implemented build flavors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
     }
 }
 
+configurations {
+    all {
+        exclude module: 'httpclient'
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     endpointsServer project(path: ':backend', configuration: 'endpoints')
