--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,17 +36,17 @@ android {
         abortOnError false
     }
 
-    flavorDimensions "free", "paid"
+    flavorDimensions "default"
 
     productFlavors {
         free {
-            dimension "free"
+            dimension "default"
             applicationIdSuffix ".free"
             versionNameSuffix "-free"
             buildConfigField "String", "BUILD_VARIANT", "\"free\""
         }
         paid {
-            dimension "paid"
+            dimension "default"
             applicationIdSuffix ".paid"
             versionNameSuffix "-paid"
             buildConfigField "String", "BUILD_VARIANT", "\"paid\""
